kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1

kind: Ingress

metadata:
  name: web-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: "/"
    ingressclass.kubernetes.io/is-default-class: "true"

spec:
  rules:
  - host: mlops1.local.com
    http:
      paths:
      - path: /test/
        pathType: Prefix
        backend:
          service:
            name: prod-testapi
            port:
              number: 5001
      - path: /ml/
        pathType: Prefix
        backend:
          service:
            name: ml-app-service
            port:
              number: 5000
      - path: /dl/
        pathType: Prefix
        backend:
          service:
            name: file-storage
            port:
              number: 30300
